# workspace

./: .gitignore  MODULE.bazel  TODO.txt  build.bat  main.bat  run.bat
bazel/: nasm_rules.bzl
documents/toolchain_setup/: i686-elf_platform.txt  win32_platform.txt
hardware/uart_app/uart/: uart_test.v
hdl/uart_app/uart/: receiver_test.v
hdl/verilog_demo/: testbench.v
i686-elf/bootloader/: entry.s  main.c  memory_layout.h  tests.c
i686-elf/bootsector/: BUILD.bazel
i686-elf/kernel/: descriptor_tables.c  isr.c  isr.h  isr.i  isr.s  linker.h  main.c  main.h  tests.c
i686-elf/shared/bios/: disk.h  disk.s  print.h  print.s
i686-elf/shared/cpu/: gdt.c  idt.c  idt.h  io.h  io.s  timing.c  timing.h
i686-elf/shared/memory/: arena_allocator.c  memory.c  memory.h
i686-elf/shared/strings/: path_handling.c  print.c  strings.c  strings.h
i686-elf/shared/vga/: vga.c
portable/shared/: basic_defines.h
portable/shared/hashing/: hashing.h
portable/shared/memory/: linear_allocator.h
portable/shared/strings/: cstrings.h  fat_strings.h  format_strings.h
portable/shared/structures/: singly_linked_list.h
scripts/: bootstrap.bat  compile_only.bat  debug.bat  shell_startup.bat  test.bat
scripts/old_scripts/: bootstrap.bat  run.bat
scripts/python/: BUILD.bazel  hello.py  portable-msvc.py
scripts/shell/: shell_startup.bat
toolchain_setup/: hdl_platform.txt  i686-elf_platform.txt
toolchains/i686-elf/: BUILD.bazel  MODULE.bazel  toolchain.bzl
toolchains/nasm/: .gitignore  BUILD.bazel  MODULE.bazel  rules.bzl  toolchain.bzl
verilog/uart_app/: controller.v  digital_clock.v
verilog/uart_app/uart/: baud_generator_test.v  receiver.v
win32/: TODO.txt
win32/applications/bootstrapper/: bootstrapper.cpp
win32/applications/directx_demo/: directx_demo.h  main.cpp
win32/applications/fetch_data/: fetch_data.cpp
win32/applications/handmade_hero/: bitmap.cpp  bitmap.h  collision.cpp  collision.h  entity.cpp  entity.h  game.cpp  game.h  game_interface.h  memory.h  random_numbers_table.cpp  renderer.cpp  renderer.h  simulation.cpp  simulation.h  win32_platform.cpp  win32_platform.h  win32_platform_debug.cpp  world.cpp  world.h
win32/applications/imgui_demo/: dx11_backend.cpp  dx11_backend.h  main_dx11.cpp  main_opengl2.cpp  opengl2_backend.cpp  opengl2_backend.h  win32_backend.cpp  win32_backend.h
win32/applications/lint/: lint.cpp  lint.h
win32/applications/old_build/: build.cpp  targets.cpp  targets.h
win32/applications/ray_tracer/: brdf.cpp  brdf.h  main.cpp  ray_tracer.h
win32/applications/simulator/: logic_gates.cpp  logic_gates.h  main.cpp  rendering.cpp  simulation.cpp  simulation.h
win32/bootstrapper/: bootstrapper.cpp
win32/directx_demo/: directx_demo.h  main.cpp
win32/handmade_hero/: bitmap.h  entity.h  game.h  game_interface.h  memory.h  renderer.h  simulation.cpp  simulation.h  win32_platform.cpp  win32_platform.h  world.h
win32/imgui_demo/: dx11_backend.h  opengl2_backend.cpp  opengl2_backend.h  win32_backend.cpp  win32_backend.h
win32/lint/: lint.h
win32/old_build/: build.cpp  build.h
win32/old_build/actions/: gcc.cpp  msvc.cpp  nasm.h
win32/ray_tracer/: brdf.cpp  brdf.h
win32/refterm_demo/: fast_pipe.h  refterm.c  refterm.h  splat.cpp
win32/shared/: base_types.h  basic_defines.h
win32/shared/basic_structures/: singly_linked_list.asm  (+1 more)
win32/simulator/: electrical.h
(+133 files in other folders)
