"""main workspace bazel module file"""

module(
    name = "workspace",
    version = "0.1.0",
)

# nasm_rules
bazel_dep(name = "nasm_rules", version = "0.1.0")
local_path_override(
    module_name = "nasm_rules",
    path = "../bazel_modules/nasm_rules",
)
register_toolchains("@nasm_rules//:nasm_toolchain")
