# load(":toolchain.bzl", "i686_dash_elf_toolchain_rule")
load("@rules_cc//cc/toolchains/cc_toolchain.bzl", "cc_toolchain")

# toolchain_type(name = "i686-elf_toolchain_type")

# i686_dash_elf_toolchain_rule(
#     name = "i686-elf_toolchain_rule_implementation",
# )

# toolchain(
#     name = "i686-elf_toolchain",
#     toolchain = ":i686-elf_toolchain_rule_implementation",
#     toolchain_type = ":i686-elf_toolchain_type",
# )

filegroup(
    name = "all",
    srcs = glob(["**/*"]),
)

cc_toolchain(
    name = "i686-elf_cc_toolchain",
    all_files = ":all",
    ar_files = ":all",
    as_files = ":all",
    compiler_files = ":all",
    dwp_files = ":all",
    dynamic_runtime_lib = ":all",
    linker_files = ":all",
    objcopy_files = ":all",
    static_runtime_lib = ":all",
    strip_files = ":all",
    toolchain_config = ":cc_toolchain_config",
)
