load(":toolchain.bzl", "nasm_toolchain_rule")

toolchain_type(name = "nasm_toolchain_type")

nasm_toolchain_rule(
    name = "nasm_toolchain_implementation",
    nasm_exe = ":nasm_exe",
    ndisasm_exe = ":ndisasm_exe",
)

toolchain(
    name = "nasm_toolchain",
    toolchain = ":nasm_toolchain_implementation",
    toolchain_type = ":nasm_toolchain_type",
)

filegroup(
    name = "nasm_exe",
    srcs = ["nasm.exe"],
)

filegroup(
    name = "ndisasm_exe",
    srcs = ["ndisasm.exe"],
)
